# backend/internal/controller/http/docs/openapi.yaml
@@ -339,90 +339,6 @@ paths:
         "401":
           description: Не авторизован
   
-  /v1/private/chats/{id}/history:
-    get:
-      summary: Получить историю сообщений чата
-      description: Возвращает список сообщений в указанном чате
-      security:
-        - bearerAuth: []
-      tags: [Private]
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: ID чата
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Успешный запрос
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  messages:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                          description: ID сообщения
-                          example: 1
-                        user_id:
-                          type: integer
-                          description: ID пользователя
-                          example: 113
-                        username:
-                          type: string
-                          description: Имя пользователя
-                          example: "alex"
-                        message:
-                          type: string
-                          description: Текст сообщения
-                          example: "Привет! Как дела?"
-                        time:
-                          type: string
-                          description: Время отправки сообщения
-                          example: "15:26"
-  
-  /v1/private/chats/headers:
-    get:
-      summary: Получить заголовки чатов с последними сообщениями
-      description: Возвращает список заголовков всех чатов пользователя с предпросмотром последнего сообщения. ID пользователя извлекается из JWT токена.
-      security:
-        - bearerAuth: []
-      tags: [Private]
-      responses:
-        '200':
-          description: Успешный запрос
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  chats:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        chat_id:
-                          type: integer
-                          description: ID чата
-                          example: 42
-                        chat_name:
-                          type: string
-                          description: Имя чата (имя собеседника для личных чатов / название группы для групповых)
-                          example: "Александр"
-                        message:
-                          type: string
-                          description: Текст сообщения
-                          example: "Привет! Как дела?"
-                        time:
-                          type: string
-                          description: Время отправки сообщения
-                          example: "15:26"
 components:
   securitySchemes:
     bearerAuth:
